<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Note Keeper</string>
    <string name="action_settings">Settings</string>
    <string name="server_prompt">Web Server Settings</string>
    <string name="port_number">Port Number:</string>
    <string name="server_url">URL:</string>
    <string name="settings_enter_button"> Enter</string>
    <string name="settings_clear_button"> Clear All</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_new"></string>
    <string name="action_delete"></string>
    <string name="title_activity_new_note">NewNoteActivity</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="addnewnote">Add Note</string>
    <string name="enter_time">Time</string>
    <string name="enter_date">Date</string>
    <string name="title_activity_accelerometer">AccelerometerActivity</string>
    <string name="title_activity_shake">ShakeActivity</string>
    <string name="date_hint">Date Reminder...</string>
    <string name="time_hint">Time Reminder...</string>
    <string name="refresh_button">Refresh</string>
    <string name="welcomemsg">Welcome To NoteKeeper</string>
    <string name="picbutton">Camera!</string>

</resources>